@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = 'Settings' %}
-{% set current_page_name = 'settings' %}
+{% set pagename = 'settings' %}
 {% block body %}
   <h1>{{ project }} Documentation Settings</h1>
   <p>
